Version 1.8.11  October 18, 2017

  - Added support for Matrix Market array format.

Version 1.8.10  October 17, 2017

  - Updated configurations in win/Makefile.in.

Version 1.8.9  October 11, 2017

  - Updated configurations in win/Makefile.in for Microsoft MPI.
  - Fixed SAAMG related configurations in win/Makefile.in.

Version 1.8.8  October 9, 2017

  - Updated configurations in win/Makefile.in for Intel Compilers.

Version 1.8.7  October 4, 2017

  - Fixed configure.ac to exclude complex.h by default (thanks to Fuyuki Saito).
  - Fixed configurations in win/Makefile.in.

Version 1.8.6  September 24, 2017

  - Fixed bug in win/Makefile.in (thanks to Jian Li).
  - Added support for inputting imaginary shift for eigensolvers.

Version 1.8.5  September 14, 2017

  - Updated documents.

Version 1.8.4  August 29, 2017

  - Fixed documents.

Version 1.8.3  August 10, 2017

  - Updated documents.
  - Updated eigensolvers.

Version 1.8.2  August 6, 2017

  - Added support for inputting complex vectors in Matrix Market format.

Version 1.8.1  August 4, 2017

  - Fixed bug in lis_solver_sor.c.
  - Changed names of flags -ssor_w and -hybrid_w to -ssor_omega and -hybrid_omega,
    respectively.

Version 1.8.0  August 1, 2017

  - Added official support for test/test3c.c for solving multiple-step linear equations.

Version 1.7.37  July 31, 2017

  - Fixed MPI bug in test/test3c.c.
  - Fixed bug in lis_solver_sor.c.

Version 1.7.36  July 27, 2017

  - Fixed MPI memory leak bug in lis_matrix_assemble() (thanks to Danyang Su).
  - Fixed lis_input_vector() related bug in test1.c (thanks to Danyang Su).

Version 1.7.35  July 26, 2017

  - Fixed MPI memory leak bug in lis_matrix_assemble() (thanks to Danyang Su).

Version 1.7.34  July 17, 2017

  - Fixed MPI bugs in lis_vector_gather() and lis_vector_scatter() (thanks to Danyang Su).

Version 1.7.33  June 11, 2017

  - Added exception handling for inner linear solvers.

Version 1.7.32  June 10, 2017
